<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/create_story_form_title"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:id="@+id/title"
              android:hint="@string/create_story_form_fields_title_hint"
            />
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/create_story_form_fields_paragraph_label"
              android:labelFor="@+id/paragraph"
            />
    <EditText android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:id="@+id/paragraph"
              android:hint="@string/create_story_form_fields_paragraph_hint"
              android:lines="10"
            />
    <Button android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_story_form_submit_button"
            />

</LinearLayout>